# astrea

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  conanfile.txt  requirements.txt
astrea/astro/: CMakeLists.txt
astrea/astro/astro/: astro.fwd.hpp  astro.hpp
astrea/astro/astro/drivers/: main.cpp
astrea/astro/astro/element_sets/: CartesianVector.hpp  ElementSet.hpp  OrbitalElements.cpp  OrbitalElements.hpp  OrbitalElements.test.cpp
astrea/astro/astro/frames/: CartesianVector.hpp  CartesianVector.test.cpp  Frame.hpp  FrameReference.cpp  FrameReference.hpp  frame_concepts.hpp  frames.hpp  instances.fwd.hpp  transformations.hpp  typedefs.hpp
astrea/astro/astro/state/: CartesianVector.hpp  Pose.cpp  Pose.hpp  State.cpp  State.hpp  State.test.cpp  StateHistory.cpp  StateHistory.hpp  StateHistory.test.cpp  angular_coordinates.hpp
astrea/astro/astro/systems/: AstrodynamicsSystem.cpp  AstrodynamicsSystem.hpp  AstrodynamicsSystem.test.cpp  Barycenter.hpp  CelestialBody.cpp  CelestialBody.hpp  CelestialBody.test.cpp  CelestialBodyFactory.cpp  CelestialBodyFactory.hpp  CelestialBodyFactory.test.cpp
astrea/astro/astro/time/: Date.cpp  Date.hpp  Date.test.cpp  Interval.hpp  Inverval.test.cpp  JulianDateClock.hpp  JulianDateClock.test.cpp
astrea/astro/astro/types/: enums.hpp  type_traits.hpp  typedefs.hpp  variant_util.hpp
astrea/astro/astro/utilities/: conversions.cpp  conversions.hpp  conversions.test.cpp
astrea/astro/cmake/: swig.cmake
astrea/astro/data/gravity_models/: gmm3120.txt  shgj120p.txt
astrea/astro/data/jpl_ephemeris_data/: jpl_planetary_and_lunar_ephemerides.md
astrea/astro/data/planetary/: template.json
astrea/astro/examples/: CMakeLists.txt
astrea/astro/examples/dynamic_systems/: main.cpp
astrea/astro/examples/element_sets_and_conversions/: CMakeLists.txt  main.cpp
astrea/astro/examples/state_representations/: CMakeLists.txt  main.cpp
astrea/astro/examples/strongly_typed_frames/: main.cpp
astrea/astro/examples/strongly_typed_units/: main.cpp
astrea/astro/examples/time_systems/: CMakeLists.txt  main.cpp
astrea/astro/pyastro/: jpl_ephemeris_parser.py
astrea/astro/tests/: CMakeLists.txt
astrea/astro/tests/legacy/: CMakeLists.txt
astrea/astro/tests/utilities/: comparisons.cpp  comparisons.hpp
astrea/math/: CMakeLists.txt
astrea/math/math/: chebyshev_util.cpp  chebyshev_util.hpp  interpolation.cpp  interpolation.hpp  interpolation.test.cpp  test_util.hpp  trig.hpp  trig.test.cpp  utils.cpp  utils.hpp  utils.test.cpp
astrea/snapshot/: CMakeLists.txt
astrea/snapshot/data/: cartesian.json
astrea/snapshot/snapshot/: snapshot.hpp
astrea/snapshot/snapshot/database/: Database.hpp  Database.ipp
astrea/snapshot/snapshot/drivers/: avro_test.cpp  main.cpp  query_test.cpp
astrea/snapshot/snapshot/types/: typedefs.hpp
astrea/snapshot/snapshot/utilities/: string_util.cpp  string_util.hpp
astrea/trace/: CMakeLists.txt
astrea/trace/pytrace/: plots.py
astrea/trace/trace/: trace.fwd.hpp  trace.hpp
astrea/trace/trace/analysis/: access_analysis.cpp  access_analysis.hpp
astrea/trace/trace/drivers/: main.cpp
astrea/trace/trace/risesets/: AccessArray.cpp  AccessArray.hpp  AccessArray.test.cpp  RiseSetArray.cpp  RiseSetArray.hpp  RiseSetArray.test.cpp  riseset_utils.cpp  riseset_utils.hpp  riseset_utils.test.cpp
astrea/trace/trace/types/: typedefs.hpp
astrea/units/: CMakeLists.txt
astrea/units/units/: avro.hpp  constants.hpp  custom.hpp  detail.hpp  hash.hpp  time.hpp  typedefs.hpp  units.hpp  util.hpp
astrea/utilities/: CMakeLists.txt
astrea/utilities/tests/: CMakeLists.txt
astrea/utilities/utilities/: ProgressBar.hpp  json_util.cpp  json_util.hpp  json_util.test.cpp  string_util.cpp  string_util.hpp  string_util.test.cpp  utilities.hpp
newtool/access/: CMakeLists.txt  Makefile
newtool/access/access/: access.cpp  access.hpp
newtool/access/access/drivers/: main.cpp
newtool/astro/: CMakeLists.txt  Makefile
newtool/astro/astro/: State.cpp  State.hpp  astro.fwd.hpp  astro.hpp  main.cpp
newtool/astro/swig/: astro.i
newtool/astro/tests/: Makefile
newtool/math/: CMakeLists.txt
newtool/math/math/: interpolation.cpp  interpolation.hpp  utils.cpp  utils.hpp  utils.test.cpp
newtool/math/tests/: CMakeLists.txt
newtool/vehicles/: CMakeLists.txt
newtool/vehicles/vehicles/: testcpp  testcpp.cpp
source/: CMakeLists.txt  GravitationalBody.cpp  Integrator.cpp  LambertSolver.cpp  Spacecraft.cpp  State.cpp  astro.code-workspace  main.cpp
source/access/: access.cpp
source/element_sets/: OrbitalElements.cpp
source/element_sets/orbital_elements/: Cartesian.cpp  Equinoctial.cpp  Keplerian.cpp
source/propagation/: EquationsOfMotion.cpp  Integrator.cpp  LambertSolver.cpp
source/propagation/equations_of_motion/: CoesVop.cpp  CowellsMethod.cpp  EquinoctialVop.cpp  J2MeanVop.cpp  KeplerianVop.cpp  MeesVop.cpp  TwoBody.cpp
source/propagation/force_models/: AtmosphericForce.cpp  ForceModel.cpp  NBodyForce.cpp  OblatenessForce.cpp  OblatnessForce.cpp  SolarRadiationPressureForce.cpp
source/systems/: AstrodynamicsSystem.cpp  CelestialBody.cpp  CelestialBodyBuilder.cpp  CelestialBodyFactory.cpp  GravitationalBody.cpp  SolarObjectBuilder.cpp  SolarObjectFactory.cpp
source/time/: Time.cpp
source/time/access/: RiseSetArray.cpp
source/utilities/: conversions.cpp  convert.cpp  math_c.cpp  riseset_utils.cpp
source/utilities/math/: interpolation.cpp  math_c.cpp
tests/: CMakeLists.txt  test_dynamics.cpp
tests/profiling/: profile_main.sh
tests/tests/: test_conversions.cpp  test_dynamics.cpp
waveguide/access/: CMakeLists.txt  Makefile
waveguide/access/access/: access.cpp  access.fwd.hpp  access.hpp
waveguide/access/pyaccess/: plots.py
waveguide/access/tests/: CMakeLists.txt
waveguide/astro/tests/: CMakeLists.txt
waveguide/snapshot/: CMakeLists.txt
waveguide/snapshot/data/: cpx.json
waveguide/snapshot/snapshot/: snapshot.hpp
waveguide/snapshot/tests/: CMakeLists.txt
(+625 files in other folders)
